Fix index.html routing

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
 <body>
     <div class="header">
-        <a href="../my-first-site/index.html">
-            <img src="../my-first-site/images/milkstore-logo.svg" alt="milkystore" id="start">
+        <a href="index.html">
+            <img src="images/milkstore-logo.svg" alt="milkystore" id="start">
         </a>
         <div class="linka">
-            <a href="../my-first-site/pages/shop.html" class="active">
+            <a href="pages/shop.html" class="active">
                 <h4>Shop Milk</h4>
             </a>
-            <a href="../my-first-site/pages/about.html">
+            <a href="pages/about.html">
                 <h4>About Our Milk</h4>
             </a>
-            <a href="../my-first-site/pages/form.html">
+            <a href="pages/form.html">
                 <h4>Contact Us</h4>
             </a>
         </div>
@@ -48,7 +48,7 @@
                         <br>
                         We hope you think so too.
                     </p>
-                    <a href="../my-first-site/pages/shop.html">
+                    <a href="pages/shop.html">
                         <button>
                             <span class="material-icons">
                                 shopping_cart
@@ -67,19 +67,19 @@
             <div class="flavors">
                 <h1>Milk Flavors</h1>
                 <div class="types">
-                    <a href="../my-first-site/pages/shop.html">
+                    <a href="pages/shop.html">
                         <div class="cumem">
                             <img src="images/Image 3.png" alt="">
                             <h3 id="hot">Hot</h3>
                         </div>
                     </a>
-                    <a href="../my-first-site/pages/shop.html">
+                    <a href="pages/shop.html">
                         <div class="cumem">
                             <img src="images/Image 4.png" alt="">
                             <h3 id="cold">Cold</h3>
                         </div>
                     </a>
-                    <a href="../my-first-site/pages/shop.html">
+                    <a href="pages/shop.html">
                         <div class="cumem">
                             <img src="images/Image 5.png" alt="">
                             <h3 id="recycle">Recycled <label>(NOT GOOD)</label>
@@ -103,7 +103,7 @@
                     looking for a specific creature’s milk, let us know!
                     <br>
                     <br>
-                    <a id="learn" href="../my-first-site/pages/about.html">Learn more</a>
+                    <a id="learn" href="pages/about.html">Learn more</a>
 
                 </p>
             </div>
