Fix misc issues

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,17 +15,16 @@
 </head>
 
 <body>
-
     <div class="header">
         <a href="../index.html">
             <img src="../images/milkstore-logo.svg" alt="cummy" id="start">
         </a>
         <div class="linka">
-            <a href="shop.html" class="active">
+            <a href="shop.html">
                 <h4>Shop Milk</h4>
             </a>
-            <a href="about.html">
-                <h4 id="active">About Our Milk</h4>
+            <a href="about.html" class="active">
+                <h4>About Our Milk</h4>
             </a>
             <a href="form.html">
                 <h4>Contact Us</h4>
@@ -34,57 +33,59 @@
     </div>
 
     <div class="intromilk">
-        <div class="aboutmilk">
-            <div class="milktext">
-                <h1>About Our Milk</h1>
-                <p>Milk is a nutrient-rich liquid food produced by the mammary glands of mammals. It is the primary
-                    source of nutrition for young mammals (including breastfed human infants) before they are able to
-                    digest solid food. Early-lactation milk, which is called colostrum, contains antibodies that
-                    strengthen the immune system and thus reduces the risk of many diseases. Milk contains many other
-                    nutrients, including protein and lactose.</p>
-            </div>
-            <img src="../images/milk-hands.png" alt="">
-        </div>
+        <div class="container">
+            <div class="aboutmilk grid-2">
+                <div class="milktext">
+                    <h1>About Our Milk</h1>
+                    <p>Milk is a nutrient-rich liquid food produced by the mammary glands of mammals. It is the primary
+                        source of nutrition for young mammals (including breastfed human infants) before they are able to
+                        digest solid food. Early-lactation milk, which is called colostrum, contains antibodies that
+                        strengthen the immune system and thus reduces the risk of many diseases. Milk contains many other
+                        nutrients, including protein and lactose.</p>
+                </div>
 
+                <img src="../images/milk-hands.png" alt="">
+            </div>
+        </div>
     </div>
 
     <div class="truth">
-        <div class="abouttruth">
-            <div>
-                <img id="cow" src="../images/cow-of-truth.png" alt="">
+        <div class="container">
+            <div class="abouttruth grid-2">
+                <div>
+                    <img id="cow" src="../images/cow-of-truth.png" alt="">
+                </div>
+
+                <div class="truthtext">
+                    <h1>The Truth</h1>
+                    <p>
+                        The milk-builds-strong-bones claim was not the first to collapse under scrutiny. In 2005, the
+                        Physicians Committee for Responsible Medicine (PCRM) petitioned the Federal Trade Commission (FTC)
+                        to examine industry advertising claiming that milk could cause weight loss.
+                        <br>
+                        <br>
+                        A multimillion-dollar,
+                        celebrity-filled ad campaign was based on the findings of a single Tennessee researcher who reported
+                        that, in small numbers of people, dieters who included milk in their low-calorie diet plans lost
+                        more weight than dieters who left milk out. Other researchers were not able to replicate the
+                        finding.
+                        <br>
+                        <br>
+                        In response to PCRM’s petition, the FTC’s Division of Advertising Practices met with U.S.
+                        Department of Agriculture staff who oversaw the campaign and representatives of the National Fluid
+                        Milk Processor Promotion Board and the National Dairy Promotion and Research Board who agreed to
+                        discontinue all advertising and other marketing activities involving weight-loss claims.
+                        <br>
+                        <br>
+                        The
+                        decision also applied to Dairy Management Inc., which was created to increase demand for
+                        U.S.-produced dairy products on behalf of America’s dairy product producers.
+                    </p>
+                </div>
             </div>
-            <div class="truthtext">
-                <h1>The Truth</h1>
-                <p>
-                    The milk-builds-strong-bones claim was not the first to collapse under scrutiny. In 2005, the
-                    Physicians Committee for Responsible Medicine (PCRM) petitioned the Federal Trade Commission (FTC)
-                    to examine industry advertising claiming that milk could cause weight loss.
-                    <br>
-                    <br>
-                    A multimillion-dollar,
-                    celebrity-filled ad campaign was based on the findings of a single Tennessee researcher who reported
-                    that, in small numbers of people, dieters who included milk in their low-calorie diet plans lost
-                    more weight than dieters who left milk out. Other researchers were not able to replicate the
-                    finding.
-                    <br>
-                    <br>
-                    In response to PCRM’s petition, the FTC’s Division of Advertising Practices met with U.S.
-                    Department of Agriculture staff who oversaw the campaign and representatives of the National Fluid
-                    Milk Processor Promotion Board and the National Dairy Promotion and Research Board who agreed to
-                    discontinue all advertising and other marketing activities involving weight-loss claims.
-                    <br>
-                    <br>
-                    The
-                    decision also applied to Dairy Management Inc., which was created to increase demand for
-                    U.S.-produced dairy products on behalf of America’s dairy product producers.
-                </p>
-            </div>
-
-
-
-
         </div>
     </div>
+
     <div>
         <div class="more">
             <h1>Want to know more?</h1>
@@ -103,13 +104,6 @@
             <img src="../images/facebook-brands.svg" alt="">
         </div>
     </div>
-
-
-
-
-
-
-
 </body>
 
 </html>
