--- a/pages/form.html
+++ b/pages/form.html
@@ -19,15 +19,16 @@
         <a href="../index.html">
             <img src="../images/milkstore-logo.svg" alt="cummy" id="start">
         </a>
+        
         <div class="linka">
-            <a href="shop.html" class="active">
+            <a href="shop.html">
                 <h4>Shop Milk</h4>
             </a>
             <a href="about.html">
                 <h4>About Our Milk</h4>
             </a>
-            <a href="form.html">
-                <h4 id="active">Contact Us</h4>
+            <a href="form.html" class="active">
+                <h4>Contact Us</h4>
             </a>
         </div>
     </div>
