--- a/index.html
+++ b/index.html
@@ -34,100 +34,101 @@
         </div>
     </div>
 
-
-    <div class="website">
-        <div class="main">
-            <div id="maininfo">
-                <div>
-                    <h1>Our Milk. <br>
-                        Just for you.</h1>
-                    <p>Sometimes, it just isn’t enough to say, “No, thank you.” Is this one of those times? I guess so.
-                        What
-                        we like to say here at MilkStore™ is, “One glass, and you can’t stop gassin.”
-                        <br>
-                        <br>
-                        We hope you think so too.
-                    </p>
-                    <a href="pages/shop.html">
-                        <button>
-                            <span class="material-icons">
-                                shopping_cart
-                            </span>
-                            Shop Milk
-                        </button>
-                    </a>
+    <div class="index">
+        <div class="container">
+            <div class="main">
+                <div id="maininfo">
+                    <div>
+                        <h1>Our Milk. <br>
+                            Just for you.</h1>
+                        <p>Sometimes, it just isn’t enough to say, “No, thank you.” Is this one of those times? I guess so.
+                            What
+                            we like to say here at MilkStore™ is, “One glass, and you can’t stop gassin.”
+                            <br>
+                            <br>
+                            We hope you think so too.
+                        </p>
+                        <a href="pages/shop.html">
+                            <button>
+                                <span class="material-icons">
+                                    shopping_cart
+                                </span>
+                                Shop Milk
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="glasswrap">
+                    <img src="images/Image 2.png" alt="glass">
                 </div>
             </div>
-            <div class="glasswrap">
-                <img src="images/Image 2.png" alt="glass">
+
+            <section id="shop">
+                <div class="flavors">
+                    <h1>Milk Flavors</h1>
+                    <div class="types">
+                        <a href="pages/shop.html">
+                            <div class="cumem">
+                                <img src="images/Image 3.png" alt="">
+                                <h3 id="hot">Hot</h3>
+                            </div>
+                        </a>
+                        <a href="pages/shop.html">
+                            <div class="cumem">
+                                <img src="images/Image 4.png" alt="">
+                                <h3 id="cold">Cold</h3>
+                            </div>
+                        </a>
+                        <a href="pages/shop.html">
+                            <div class="cumem">
+                                <img src="images/Image 5.png" alt="">
+                                <h3 id="recycle">Recycled <label>(NOT GOOD)</label>
+                                </h3>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <div class="info">
+                <img src="images/milk-glass.png" alt="">
+                <div id="infotext">
+                    <h1>About Our Milk</h1>
+                    <p>Our Milk™ is locally sourced from the finest individuals, parties, and beliefs. We pride ourselves on
+                        being the only store with the sole purpose of providing Milk™ to the masses. Our high quality, low
+                        calorie Milk™ will be sure to leave you crying with joy.
+                        <br>
+                        <br>
+                        For those not in the know, Milk™ is not just from cows, but all sorts of creatures. If you’re
+                        looking for a specific creature’s milk, let us know!
+                        <br>
+                        <br>
+                        <a id="learn" href="pages/about.html">Learn more</a>
+
+                    </p>
+                </div>
             </div>
         </div>
 
-        <section id="shop">
-            <div class="flavors">
-                <h1>Milk Flavors</h1>
-                <div class="types">
-                    <a href="pages/shop.html">
-                        <div class="cumem">
-                            <img src="images/Image 3.png" alt="">
-                            <h3 id="hot">Hot</h3>
+        <section id="formin">
+            <div class="milkform">
+                <h1>Sign up for our newsletter</h1>
+                <p>Enter your email below, and we’ll send you creamy emails every couple of hours!</p>
+
+                <form>
+                    <!-- Form shit -->
+                    <div class="emails">
+                        <div class="input-wrapper">
+                            <input type="text" placeholder="Enter your email" />
                         </div>
-                    </a>
-                    <a href="pages/shop.html">
-                        <div class="cumem">
-                            <img src="images/Image 4.png" alt="">
-                            <h3 id="cold">Cold</h3>
-                        </div>
-                    </a>
-                    <a href="pages/shop.html">
-                        <div class="cumem">
-                            <img src="images/Image 5.png" alt="">
-                            <h3 id="recycle">Recycled <label>(NOT GOOD)</label>
-                            </h3>
-                        </div>
-                    </a>
-                </div>
+
+
+                        <button type="submit">Milk Me!</button>
+                    </div>
+                </form>
             </div>
         </section>
-
-        <div class="info">
-            <img src="images/milk-glass.png" alt="">
-            <div id="infotext">
-                <h1>About Our Milk</h1>
-                <p>Our Milk™ is locally sourced from the finest individuals, parties, and beliefs. We pride ourselves on
-                    being the only store with the sole purpose of providing Milk™ to the masses. Our high quality, low
-                    calorie Milk™ will be sure to leave you crying with joy.
-                    <br>
-                    <br>
-                    For those not in the know, Milk™ is not just from cows, but all sorts of creatures. If you’re
-                    looking for a specific creature’s milk, let us know!
-                    <br>
-                    <br>
-                    <a id="learn" href="pages/about.html">Learn more</a>
-
-                </p>
-            </div>
-        </div>
     </div>
-
-    <section id="formin">
-        <div class="milkform">
-            <h1>Sign up for our newsletter</h1>
-            <p>Enter your email below, and we’ll send you creamy emails every couple of hours!</p>
-
-            <form>
-                <!-- Form shit -->
-                <div class="emails">
-                    <div class="input-wrapper">
-                        <input type="text" placeholder="Enter your email" />
-                    </div>
-
-
-                    <button type="submit">Milk Me!</button>
-                </div>
-            </form>
-        </div>
-    </section>
 
     <div class="footer">
         <div id="rights">
