--- a/pages/shop.html
+++ b/pages/shop.html
@@ -21,7 +21,7 @@
         </a>
         <div class="linka">
             <a href="shop.html" class="active">
-                <h4 id="active">Shop Milk</h4>
+                <h4>Shop Milk</h4>
             </a>
             <a href="about.html">
                 <h4>About Our Milk</h4>
@@ -47,74 +47,75 @@
         <div class="blackback"></div>
     </div>
 
-    <div class="shop">
+    <div class="container">
+        <div class="shop">
+            <div class="shopflavors">
+                <div class="milked">
+                    <div class="mflavors">
+                        <img src="../images/Image 3.png" alt="" id="fire">
+                        <div class="flavtext">
+                            <h1 id="hotshop">Hot</h1>
 
-        <div class="shopflavors">
-            <div class="milked">
-                <div class="mflavors">
-                    <img src="../images/Image 3.png" alt="" id="fire">
-                    <div class="flavtext">
-                        <h1 id="hotshop">Hot</h1>
+                            <p>Just like Little Caesar's, this Milk is hot and ready. Straight from the pipes and piping
+                                hot, this Milk is full of a full-bodied, salty flavor. You'll love the way it feels when it
+                                hits your lips, and if you don't, you probably just don't like Milk in general.
+                                <br>
+                                <br>
+                                Also, this Milk is spicy.
+                            </p>
 
-                        <p>Just like Little Caesar's, this Milk is hot and ready. Straight from the pipes and piping
-                            hot, this Milk is full of a full-bodied, salty flavor. You'll love the way it feels when it
-                            hits your lips, and if you don't, you probably just don't like Milk in general.
-                            <br>
-                            <br>
-                            Also, this Milk is spicy.
-                        </p>
-
-                        <button class="buy" disabled>Sold Out</button>
-                    </div>
-                </div>
-
-                <div class="mflavors">
-                    <img src="../images/Image 4.png" alt="" id="ice">
-                    <div class="flavtext">
-                        <h1 id="coldshop">Cold</h1>
-
-                        <p>Not a fan of the warmth? Maybe try the cold! Our cold Milk is not fresh. It has been sitting
-                            in a cold storage container for a minimum of 4 years, ensuring that all of the little
-                            critters inside are dead as dead can be. If you don't like Milk, you probably won't like
-                            this either.
-                            <br>
-                            <br>
-                            This Milk is not spicy.
-                        </p>
-
-                        <button class="buy" disabled>Sold Out</button>
-                    </div>
-                </div>
-
-                <div class="mflavors">
-                    <img src="../images/Image 5.png" alt="" id="recycle">
-                    <div class="flavtext">
-                        <div id="recyclegrid">
-                            <h1 id="recycleshop">Recycled</h1>
-                            <h5 id="shoplabel">(NOT GOOD)</h5>
+                            <button class="buy" disabled>Sold Out</button>
                         </div>
-
-
-                        <p>Uh oh! You've been MILKED! This Milk is gross and absolutely repulsive. It really is not
-                            good, and we don't recommend it. That said, some people do like it. Maybe. Honestly, this
-                            Milk is what we've had lying around leftover on the floor.
-                            <br>
-                            <br>
-                            Sometimes this Milk is spicy, but
-                            mostly due to the dirt.
-                        </p>
-
-                        <button class="buy" disabled>Sold Out</button>
                     </div>
-                    </h3>
+
+                    <div class="mflavors">
+                        <img src="../images/Image 4.png" alt="" id="ice">
+                        <div class="flavtext">
+                            <h1 id="coldshop">Cold</h1>
+
+                            <p>Not a fan of the warmth? Maybe try the cold! Our cold Milk is not fresh. It has been sitting
+                                in a cold storage container for a minimum of 4 years, ensuring that all of the little
+                                critters inside are dead as dead can be. If you don't like Milk, you probably won't like
+                                this either.
+                                <br>
+                                <br>
+                                This Milk is not spicy.
+                            </p>
+
+                            <button class="buy" disabled>Sold Out</button>
+                        </div>
+                    </div>
+
+                    <div class="mflavors">
+                        <img src="../images/Image 5.png" alt="" id="recycle">
+                        <div class="flavtext">
+                            <div id="recyclegrid">
+                                <h1 id="recycleshop">Recycled</h1>
+                                <h5 id="shoplabel">(NOT GOOD)</h5>
+                            </div>
+
+
+                            <p>Uh oh! You've been MILKED! This Milk is gross and absolutely repulsive. It really is not
+                                good, and we don't recommend it. That said, some people do like it. Maybe. Honestly, this
+                                Milk is what we've had lying around leftover on the floor.
+                                <br>
+                                <br>
+                                Sometimes this Milk is spicy, but
+                                mostly due to the dirt.
+                            </p>
+
+                            <button class="buy" disabled>Sold Out</button>
+                        </div>
+                        </h3>
+                    </div>
                 </div>
-            </div>
 
-            <div class="note">
-                <h3>Please Note</h3>
-                <p>We are currently sold out of many of our products. To know when we are back in stock, sign up for our
-                    email newsletter on the <a id="learn" href="../index.html">home page </a>.</p>
+                <div class="note">
+                    <h3>Please Note</h3>
+                    <p>We are currently sold out of many of our products. To know when we are back in stock, sign up for our
+                        email newsletter on the <a id="learn" href="../index.html">home page </a>.</p>
 
+                </div>
             </div>
         </div>
     </div>
