footer mobile alignment

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="images/milkstore-logo.svg" alt="milkystore" id="start">
         </a>
         <div class="linka">
-            <a href="pages/shop.html" class="active">
+            <a href="pages/shop.html">
                 <h4>Shop Milk</h4>
             </a>
             <a href="pages/about.html">
@@ -41,7 +41,8 @@
                     <div>
                         <h1>Our Milk. <br>
                             Just for you.</h1>
-                        <p>Sometimes, it just isn’t enough to say, “No, thank you.” Is this one of those times? I guess so.
+                        <p>Sometimes, it just isn’t enough to say, “No, thank you.” Is this one of those times? I guess
+                            so.
                             What
                             we like to say here at MilkStore™ is, “One glass, and you can’t stop gassin.”
                             <br>
@@ -94,8 +95,10 @@
                 <img src="images/milk-glass.png" alt="">
                 <div id="infotext">
                     <h1>About Our Milk</h1>
-                    <p>Our Milk™ is locally sourced from the finest individuals, parties, and beliefs. We pride ourselves on
-                        being the only store with the sole purpose of providing Milk™ to the masses. Our high quality, low
+                    <p>Our Milk™ is locally sourced from the finest individuals, parties, and beliefs. We pride
+                        ourselves on
+                        being the only store with the sole purpose of providing Milk™ to the masses. Our high quality,
+                        low
                         calorie Milk™ will be sure to leave you crying with joy.
                         <br>
                         <br>
