fixing buttons and adding icons

--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/mystyles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
@@ -38,9 +40,11 @@
                 <div class="milktext">
                     <h1>About Our Milk</h1>
                     <p>Milk is a nutrient-rich liquid food produced by the mammary glands of mammals. It is the primary
-                        source of nutrition for young mammals (including breastfed human infants) before they are able to
+                        source of nutrition for young mammals (including breastfed human infants) before they are able
+                        to
                         digest solid food. Early-lactation milk, which is called colostrum, contains antibodies that
-                        strengthen the immune system and thus reduces the risk of many diseases. Milk contains many other
+                        strengthen the immune system and thus reduces the risk of many diseases. Milk contains many
+                        other
                         nutrients, including protein and lactose.</p>
                 </div>
 
@@ -60,19 +64,22 @@
                     <h1>The Truth</h1>
                     <p>
                         The milk-builds-strong-bones claim was not the first to collapse under scrutiny. In 2005, the
-                        Physicians Committee for Responsible Medicine (PCRM) petitioned the Federal Trade Commission (FTC)
+                        Physicians Committee for Responsible Medicine (PCRM) petitioned the Federal Trade Commission
+                        (FTC)
                         to examine industry advertising claiming that milk could cause weight loss.
                         <br>
                         <br>
                         A multimillion-dollar,
-                        celebrity-filled ad campaign was based on the findings of a single Tennessee researcher who reported
+                        celebrity-filled ad campaign was based on the findings of a single Tennessee researcher who
+                        reported
                         that, in small numbers of people, dieters who included milk in their low-calorie diet plans lost
                         more weight than dieters who left milk out. Other researchers were not able to replicate the
                         finding.
                         <br>
                         <br>
                         In response to PCRM’s petition, the FTC’s Division of Advertising Practices met with U.S.
-                        Department of Agriculture staff who oversaw the campaign and representatives of the National Fluid
+                        Department of Agriculture staff who oversaw the campaign and representatives of the National
+                        Fluid
                         Milk Processor Promotion Board and the National Dairy Promotion and Research Board who agreed to
                         discontinue all advertising and other marketing activities involving weight-loss claims.
                         <br>
