--- a/pages/shop.html
+++ b/pages/shop.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/mystyles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
@@ -57,14 +59,20 @@
                             <h1 id="hotshop">Hot</h1>
 
                             <p>Just like Little Caesar's, this Milk is hot and ready. Straight from the pipes and piping
-                                hot, this Milk is full of a full-bodied, salty flavor. You'll love the way it feels when it
+                                hot, this Milk is full of a full-bodied, salty flavor. You'll love the way it feels when
+                                it
                                 hits your lips, and if you don't, you probably just don't like Milk in general.
                                 <br>
                                 <br>
                                 Also, this Milk is spicy.
                             </p>
 
-                            <button class="buy" disabled>Sold Out</button>
+                            <button class="buy" disabled>
+                                <span class="material-icons">
+                                    block
+                                </span>
+                                Sold Out
+                            </button>
                         </div>
                     </div>
 
@@ -73,7 +81,8 @@
                         <div class="flavtext">
                             <h1 id="coldshop">Cold</h1>
 
-                            <p>Not a fan of the warmth? Maybe try the cold! Our cold Milk is not fresh. It has been sitting
+                            <p>Not a fan of the warmth? Maybe try the cold! Our cold Milk is not fresh. It has been
+                                sitting
                                 in a cold storage container for a minimum of 4 years, ensuring that all of the little
                                 critters inside are dead as dead can be. If you don't like Milk, you probably won't like
                                 this either.
@@ -82,7 +91,11 @@
                                 This Milk is not spicy.
                             </p>
 
-                            <button class="buy" disabled>Sold Out</button>
+                            <button class="buy" disabled>
+                                <span class="material-icons">
+                                    block
+                                </span>
+                                Sold Out</button>
                         </div>
                     </div>
 
@@ -96,7 +109,8 @@
 
 
                             <p>Uh oh! You've been MILKED! This Milk is gross and absolutely repulsive. It really is not
-                                good, and we don't recommend it. That said, some people do like it. Maybe. Honestly, this
+                                good, and we don't recommend it. That said, some people do like it. Maybe. Honestly,
+                                this
                                 Milk is what we've had lying around leftover on the floor.
                                 <br>
                                 <br>
@@ -104,7 +118,11 @@
                                 mostly due to the dirt.
                             </p>
 
-                            <button class="buy" disabled>Sold Out</button>
+                            <button class="buy" disabled>
+                                <span class="material-icons">
+                                    block
+                                </span>
+                                Sold Out</button>
                         </div>
                         </h3>
                     </div>
@@ -112,7 +130,8 @@
 
                 <div class="note">
                     <h3>Please Note</h3>
-                    <p>We are currently sold out of many of our products. To know when we are back in stock, sign up for our
+                    <p>We are currently sold out of many of our products. To know when we are back in stock, sign up for
+                        our
                         email newsletter on the <a id="learn" href="../index.html">home page </a>.</p>
 
                 </div>
