--- a/pages/form.html
+++ b/pages/form.html
@@ -12,6 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/mystyles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
@@ -19,7 +21,7 @@
         <a href="../index.html">
             <img src="../images/milkstore-logo.svg" alt="cummy" id="start">
         </a>
-        
+
         <div class="linka">
             <a href="shop.html">
                 <h4>Shop Milk</h4>
@@ -69,7 +71,11 @@
                         <textarea type="text" name="" placeholder="Your message to us..." id="textarea"></textarea>
                     </div>
 
-                    <button type="submit">Send it!</button>
+                    <button type="submit">Send it!
+                        <span class="material-icons">
+                            send
+                        </span>
+                    </button>
                 </form>
         </div>
 
