contact us mobile fix

--- a/pages/form.html
+++ b/pages/form.html
@@ -41,7 +41,7 @@
         <img src="../images/milk-pour.png" alt="">
         <div id="contactin">
             <h2>Come get creamy!</h1>
-                <p>Fill out the form below, and we’ll cream you ASAP!</p>
+                <p>Fill out the form below, and we’ll get back to you ASAP!</p>
 
                 <form id="contactform">
                     <!-- Form shit -->
